--- a/config/database.yml
+++ b/config/database.yml
@@ -25,11 +25,11 @@ development:
   <<: *default
   database: Recipedaily_development
   
- # username: your_postgres_username
- # password: your_postgres_password
+#  username: postgres
+#  password: postgressUser
 
   host: localhost
-  port: 5432
+  # port: 5000
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
