--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ development:
 #  username: postgres
 #  password: postgressUser
 
-  host: localhost
+  # host: localhost
   # port: 5000
 
   # The specified database role being used to connect to postgres.
@@ -38,16 +38,16 @@ development:
   # username: postgres
 
   # The password associated with the postgres role (username).
-  # password: postgressUser
+  password: postgressUser
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5000
+  port: 5000
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -64,7 +64,11 @@ development:
 test:
   <<: *default
   database: Recipedaily_test
-  
+  password: postgressUser
+  username: postgres
+
+  port: 5000
+
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
