--- a/config/database.yml
+++ b/config/database.yml
@@ -25,11 +25,11 @@ development:
   <<: *default
   database: Recipedaily_development
   
-#  username: postgres
-#  password: postgressUser
+ username: postgres
+ password: postgressUser
 
   # host: localhost
-  # port: 5000
+  port: 5000
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -64,10 +64,10 @@ development:
 test:
   <<: *default
   database: Recipedaily_test
-  # password: postgressUser
-  # username: postgres
+  password: postgressUser
+  username: postgres
 
-  # port: 5000
+  port: 5000
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
